add g1gc config